--- a/LegiScan.ipynb
+++ b/LegiScan.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "for dataset in datasets:\n",
     "    session_id = dataset['session_id']\n",
-    "    session_name = dataset['session_name'].replace(' ','_', regex = False)\n",
+    "    session_name = dataset['session_name'].replace(' ','_')\n",
     "    session_id_list.append(session_id)\n",
     "    session_name_list.append(session_name)"
    ]
@@ -324,47 +324,65 @@
    "source": [
     "\"\"\" Make separate dfs of some nested columns for easier querying, smaller tables\"\"\"\n",
     "\n",
-    "dfs = [\n",
-    "    {'df':bill_df},\n",
-    "    {'df':roll_call_df},\n",
-    "    {'df':vote_df},\n",
-    "    {'df':people_df}\n",
-    "]\n",
-    "\n",
-    "for key in dfs:\n",
-    "    df = key['df']\n",
-    "    \n",
-    "    nested_cols = []\n",
-    "    for col in df.columns:\n",
-    "        if '.' in col:\n",
-    "            nested_cols.append(col)\n",
-    "        elif isinstance(df[col][0],list):\n",
-    "            nested_cols.append(col)\n",
-    "            \n",
-    "    df = df.drop(columns = nested_cols, axis = 1)\n",
-    "             \n",
-    "    df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
-    "    df.replace({np.nan: None}, inplace = True)\n",
-    "    \n",
-    "    key['df'] = df\n",
-    "    \n",
-    "        \n",
-    "\"\"\" Right now I'm just interested in bill subject. If we want to do bill tracking,\n",
-    "    we should extract progress and history (probably as separate tables)\"\"\"       \n",
-    "\n",
-    "people_tbl = table.from_dataframe(people_df)\n",
-    "\n",
-    "bill_tbl = table.from_dataframe(bill_df).cut(unnested_cols)\n",
+    "# roll call\n",
     "\n",
     "roll_call_tbl = table.from_dataframe(bill_df).long_table('bill_id','votes')\n",
     "roll_call_tbl.rename_column('votes_roll_call_id', 'roll_call_id')\n",
     "\n",
-    "vote_tbl = table.from_dataframe(vote_df).long_table(['roll_call_id','bill_id'],'votes')\n",
-    "vote_tbl.rename_column('votes_people_id', 'people_id')\n",
+    "\n",
+    "# subjects\n",
     "\n",
     "subjects_tbl = table.from_dataframe(bill_df).long_table('bill_id','subjects')\n",
     "subjects_tbl.rename_column('subjects_subject_name', 'subject_name')\n",
-    "subjects_tbl.rename_column('subjects_subject_id', 'subject_id');"
+    "subjects_tbl.rename_column('subjects_subject_id', 'subject_id');\n",
+    "\n",
+    "\n",
+    "# bill\n",
+    "\n",
+    "df = bill_df\n",
+    "\n",
+    "nested_cols = []\n",
+    "for col in df.columns:\n",
+    "    if '.' in col:\n",
+    "        nested_cols.append(col)\n",
+    "    elif isinstance(df[col][0],list):\n",
+    "        nested_cols.append(col)\n",
+    "            \n",
+    "df = df.drop(columns = nested_cols, axis = 1)\n",
+    "             \n",
+    "df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
+    "df.replace({np.nan: None}, inplace = True)\n",
+    "    \n",
+    "bill_df = df\n",
+    "\n",
+    "bill_tbl = table.from_dataframe(bill_df)\n",
+    "\n",
+    "\n",
+    "# vote\n",
+    "\n",
+    "vote_tbl = table.from_dataframe(vote_df).long_table(['roll_call_id','bill_id'],'votes')\n",
+    "vote_tbl.rename_column('votes_people_id', 'people_id')\n",
+    "\n",
+    "\n",
+    "# people\n",
+    "\n",
+    "df = people_df\n",
+    "\n",
+    "nested_cols = []\n",
+    "for col in df.columns:\n",
+    "    if '.' in col:\n",
+    "        nested_cols.append(col)\n",
+    "    elif isinstance(df[col][0],list):\n",
+    "        nested_cols.append(col)\n",
+    "            \n",
+    "df = df.drop(columns = nested_cols, axis = 1)\n",
+    "             \n",
+    "df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
+    "df.replace({np.nan: None}, inplace = True)\n",
+    "    \n",
+    "people_df = df\n",
+    "\n",
+    "people_tbl = table.from_dataframe(people_df)"
    ]
   },
   {
@@ -468,7 +486,8 @@
     "l = legiscan_hashes\n",
     "r = redshift_hashes\n",
     "\n",
-    "legiscan_updated = l[l.change_hash.isin(r.change_hash) == False]"
+    "legiscan_updated = l[l.change_hash.isin(r.change_hash) == False]\n",
+    "legiscan_updated = pd.DataFrame(legiscan_updated).reset_index(drop = True)"
    ]
   },
   {
@@ -489,11 +508,13 @@
     "            nested_cols.append(col)\n",
     "        elif isinstance(df[col][0],list):\n",
     "            nested_cols.append(col)\n",
+    "            \n",
+    "    df = df.drop(columns = nested_cols, axis = 1)\n",
     "             \n",
-    "    bill_df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
-    "    bill_df.replace({np.nan: None}, inplace = True)\n",
+    "    df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
+    "    df.replace({np.nan: None}, inplace = True)\n",
     "    \n",
-    "    bill_tbl = table.from_dataframe(bill_df).cut(unnested_cols)\n",
+    "    bill_tbl = table.from_dataframe(df)\n",
     "    \n",
     "    return(bill_tbl)\n",
     "\n",
@@ -548,12 +569,12 @@
     "            roll_call = legis.get_roll_call(rc_id)\n",
     "            roll_calls.append(roll_call)\n",
     "            \n",
-    "            vote_df = pd.json_normalize(roll_calls)\n",
+    "            df = pd.json_normalize(roll_calls)\n",
     "        \n",
-    "            vote_df.mask(vote_df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
-    "            vote_df.replace({np.nan: None}, inplace = True)\n",
+    "            df.mask(df.applymap(type).eq(list) & ~df.astype(bool), inplace = True)\n",
+    "            df.replace({np.nan: None}, inplace = True)\n",
     "        \n",
-    "            vote_tbl = table.from_dataframe(vote_df).long_table(['roll_call_id','bill_id'],'votes')\n",
+    "            vote_tbl = table.from_dataframe(df).long_table(['roll_call_id','bill_id'],'votes')\n",
     "            vote_tbl.rename_column('votes_people_id', 'people_id')\n",
     "        \n",
     "            return(vote_tbl)\n",
@@ -575,11 +596,14 @@
     "\"\"\" Compare stored hashes with legiscan hashes. For hashes that don't\n",
     "    match, get the updated bill from the LegiScan API. \"\"\"\n",
     "\n",
+    "\"\"\" This takes a very long time--actually quicker to just rewrite the whole \n",
+    "    database. Needs to be modified. \"\"\"\n",
     "\n",
-    "for row in range(len(test)):\n",
+    "\n",
+    "for row in range(len(legiscan_updated)):\n",
     "    \n",
-    "    bill_id = test['bill_id'][row]\n",
-    "    change_hash = test['change_hash'][row]\n",
+    "    bill_id = legiscan_updated['bill_id'][row]\n",
+    "    change_hash = legiscan_updated['change_hash'][row]\n",
     "    \n",
     "    rs.query(f'''\n",
     "        delete from lkesich.legiscan_api_bills\n",
@@ -645,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea793e7",
+   "id": "2f2c293d",
    "metadata": {},
    "outputs": [],
    "source": []
