--- a/LegiScan.ipynb
+++ b/LegiScan.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d579c2fb",
    "metadata": {},
    "outputs": [],
@@ -154,41 +154,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5651d142",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\" If datasets is not defined in the namespace, this cell will create one API call \"\"\"\n",
-    "\n",
-    "statecode = 'me'\n",
-    "\n",
-    "if 'datasets' not in locals():\n",
-    "    datasets = legis.get_dataset_list(state = statecode)\n",
-    "\n",
-    "if 'current_session_id' not in locals():\n",
-    "    current_session_id = datasets[0]['session_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4883ba9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Running this cell will create one API call \"\"\"\n",
+    "\"\"\" Running this cell will create one API call to the getDatasetList endpoint,\n",
+    "plus one call to the getDataset endpoint for each dataset with an updated change hash. \"\"\"\n",
     "\n",
-    "\"\"\" Orignal bulk import: use session_id and session_name to extract all files\n",
-    "    for each dataset.\"\"\"\n",
+    "datasets = legis.get_dataset_list(state = 'me')\n",
     "\n",
+    "stored_hashes_loc = 'lkesich.legiscan_stored_hashes'\n",
+    "stored_hashes = rs.query(f'select * from {stored_hashes_loc}')\n",
+    "hash_dict = dict(zip(stored_hashes['session_id'], stored_hashes['dataset_hash']))\n",
+    "\n",
+    "session_ids = []\n",
+    "dataset_hashes = []\n",
+    " \n",
     "votes = []\n",
     "bills = []\n",
     "people = []\n",
-    "    \n",
+    "\n",
     "for dataset in datasets:\n",
     "    session_id = dataset['session_id']\n",
-    "    access_key = dataset['access_key'] \n",
+    "    access_key = dataset['access_key']\n",
+    "    dataset_hash = dataset['dataset_hash']\n",
+    "    \n",
+    "    session_ids.append(session_id)\n",
+    "    dataset_hashes.append(dataset_hash)\n",
+    "    \n",
+    "    if hash_dict.get(session_id) == dataset_hash:\n",
+    "        continue\n",
+    "        \n",
     "    api_output = legis.get_dataset(session_id, access_key)\n",
     "    encoded = base64.b64decode(api_output['zip'])\n",
     "    zipped = zipfile.ZipFile(io.BytesIO(encoded))\n",
@@ -211,18 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a795ba6",
+   "execution_count": 4,
+   "id": "1c4be2ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Unpack nested columns into separate tables + clean column names \"\"\"\n",
-    "\n",
-    "bill_df = pd.json_normalize(bills)\n",
-    "vote_df = pd.json_normalize(votes)\n",
-    "people_df = pd.json_normalize(people)\n",
-    "\n",
-    "\n",
     "def simplify_df(df):\n",
     "    \n",
     "    nested_cols = []\n",
@@ -259,118 +249,242 @@
     "        except:\n",
     "            pass\n",
     "        \n",
-    "    return tbl\n",
-    "\n",
-    "# roll call\n",
-    "roll_call_tbl = table.from_dataframe(bill_df).long_table('bill_id','votes')\n",
-    "clean_names(roll_call_tbl, 'votes_') #note: this creates a column called desc, which redshift will not create\n",
-    "\n",
-    "# subjects\n",
-    "subjects_tbl = table.from_dataframe(bill_df).long_table('bill_id','subjects')\n",
-    "clean_names(subjects_tbl, 'subjects_')\n",
-    "\n",
-    "# sponsors\n",
-    "sponsors_tbl = table.from_dataframe(bill_df).long_table('bill_id','sponsors')\n",
-    "clean_names(sponsors_tbl, 'sponsors_')\n",
-    "\n",
-    "# vote\n",
-    "vote_tbl = table.from_dataframe(vote_df).long_table(['roll_call_id','bill_id'],'votes')\n",
-    "clean_names(vote_tbl, 'votes_')\n",
-    "\n",
-    "# bill\n",
-    "simplified_bill_df = simplify_df(bill_df)\n",
-    "bill_tbl = table.from_dataframe(simplified_bill_df)\n",
-    "\n",
-    "# person\n",
-    "simplified_people_df = simplify_df(people_df)\n",
-    "people_tbl = table.from_dataframe(simplified_people_df)"
+    "    return tbl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e3159f7d",
+   "execution_count": 5,
+   "id": "d330bf49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "redshift INFO Building staging table: lkesich.legiscan_people_stg_20240506_1035_4331\n",
+      "redshift INFO lkesich.legiscan_people_stg_20240506_1035_4331 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_people_stg_20240506_1035_4331.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_people\n",
+      "redshift INFO lkesich.legiscan_people_stg_20240506_1035_4331 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_people vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1036_3562\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1036_3562 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1036_3562.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1036_3562 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_roll_calls_stg_20240506_1036_2159\n",
+      "redshift INFO lkesich.legiscan_roll_calls_stg_20240506_1036_2159 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_roll_calls_stg_20240506_1036_2159.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_roll_calls\n",
+      "redshift INFO lkesich.legiscan_roll_calls_stg_20240506_1036_2159 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_roll_calls vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1036_8756\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1036_8756 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1036_8756.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1036_8756 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_bills_stg_20240506_1036_0700\n",
+      "redshift INFO lkesich.legiscan_bills_stg_20240506_1036_0700 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_bills_stg_20240506_1036_0700.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_bills\n",
+      "redshift INFO lkesich.legiscan_bills_stg_20240506_1036_0700 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_bills vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1037_6834\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1037_6834 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1037_6834.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1037_6834 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_votes_stg_20240506_1037_2286\n",
+      "redshift INFO lkesich.legiscan_votes_stg_20240506_1037_2286 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_votes_stg_20240506_1037_2286.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_votes\n",
+      "redshift INFO lkesich.legiscan_votes_stg_20240506_1037_2286 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_votes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1037_4237\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1037_4237 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1037_4237.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1037_4237 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_subjects_stg_20240506_1037_0602\n",
+      "redshift INFO lkesich.legiscan_subjects_stg_20240506_1037_0602 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_subjects_stg_20240506_1037_0602.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_subjects\n",
+      "redshift INFO lkesich.legiscan_subjects_stg_20240506_1037_0602 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_subjects vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1038_8019\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1038_8019 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1038_8019.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1038_8019 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_sponsors_stg_20240506_1038_6573\n",
+      "redshift INFO lkesich.legiscan_sponsors_stg_20240506_1038_6573 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_sponsors_stg_20240506_1038_6573.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_sponsors\n",
+      "redshift INFO lkesich.legiscan_sponsors_stg_20240506_1038_6573 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_sponsors vacuumed.\n",
+      "redshift INFO Building staging table: lkesich.legiscan_stored_hashes_stg_20240506_1039_5083\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1039_5083 created.\n",
+      "rs_copy_table INFO Data type is csv\n",
+      "redshift INFO Data copied to lkesich.legiscan_stored_hashes_stg_20240506_1039_5083.\n",
+      "redshift INFO Target rows inserted to lkesich.legiscan_stored_hashes\n",
+      "redshift INFO lkesich.legiscan_stored_hashes_stg_20240506_1039_5083 staging table dropped.\n",
+      "redshift INFO lkesich.legiscan_stored_hashes vacuumed.\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\" This cell will completely overwrite all legiscan tables in redshift.\n",
-    "    Use this when loading data for the first time, or if redshift tables \n",
-    "    become corrupted and need to be replaced from stored JSON files.\"\"\"\n",
+    "\"\"\" Check if new data is available \"\"\"\n",
+    "new_hashes = table.from_columns([session_ids,dataset_hashes], header = ['session_id','dataset_hash'])\n",
     "\n",
-    "legiscan_tables = [\n",
-    "    {\n",
-    "        'table':'legiscan_people',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'people_id',\n",
-    "        'distkey': 'people_id',\n",
-    "        'tbl': people_tbl\n",
-    "    },\n",
-    "    {\n",
-    "        'table':'legiscan_roll_calls',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'date',\n",
-    "        'distkey': 'roll_call_id',\n",
-    "        'tbl': roll_call_tbl\n",
-    "    },\n",
-    "    {\n",
-    "        'table':'legiscan_bills',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'session_id',\n",
-    "        'distkey': 'bill_id',\n",
-    "        'tbl': bill_tbl\n",
-    "    },\n",
-    "    {\n",
-    "        'table':'legiscan_votes',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'roll_call_id, people_id',\n",
-    "        'distkey': 'roll_call_id',\n",
-    "        'tbl': vote_tbl\n",
-    "    },\n",
-    "    {\n",
-    "        'table':'legiscan_subjects',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'subject_id',\n",
-    "        'distkey': 'bill_id',\n",
-    "        'tbl': subjects_tbl\n",
-    "    },\n",
-    "    {\n",
-    "        'table':'legiscan_sponsors',\n",
-    "        'schema': 'lkesich',\n",
-    "        'sortkey': 'people_id',\n",
-    "        'distkey': 'bill_id',\n",
-    "        'tbl': sponsors_tbl\n",
-    "    }\n",
-    "]\n",
+    "check_hashes = stored_hashes\n",
+    "check_hashes.stack(new_hashes)\n",
+    "check_hashes.deduplicate()\n",
     "\n",
-    "\"\"\" Send to redshift or Civis. If you have not defined a distkey or sortkey, \n",
-    "    you will get a warning that can be safely ignored.\"\"\"\n",
+    "if check_hashes.num_rows == new_hashes.num_rows:\n",
+    "    print(\"Legiscan data is already up to date\")\n",
+    "else:\n",
+    "    \"\"\" Unpack nested columns into separate tables + clean column names \"\"\"            \n",
+    "    bill_df = pd.json_normalize(bills)\n",
+    "    vote_df = pd.json_normalize(votes)\n",
+    "    people_df = pd.json_normalize(people)\n",
     "\n",
-    "for key in legiscan_tables:\n",
-    "    destination = key['schema'] + '.' + key['table']\n",
-    "    tbl = key['tbl']\n",
-    "    dist = key['distkey']\n",
-    "    sort = key['sortkey']\n",
-    "    tbl.to_redshift(\n",
-    "        destination, \n",
-    "        distkey = dist, \n",
-    "        sortkey = sort, \n",
-    "        if_exists = 'drop')"
+    "    # roll call\n",
+    "    roll_call_tbl = table.from_dataframe(bill_df).long_table('bill_id','votes')\n",
+    "    roll_call_tbl.rename_column('votes_roll_call_id','roll_call_id')\n",
+    "\n",
+    "    # subjects\n",
+    "    subjects_tbl = table.from_dataframe(bill_df).long_table('bill_id','subjects')\n",
+    "    clean_names(subjects_tbl, 'subjects_')\n",
+    "\n",
+    "    # sponsors\n",
+    "    sponsors_tbl = table.from_dataframe(bill_df).long_table('bill_id','sponsors')\n",
+    "    clean_names(sponsors_tbl, 'sponsors_')\n",
+    "\n",
+    "    # vote\n",
+    "    vote_tbl = table.from_dataframe(vote_df).long_table(['roll_call_id','bill_id'],'votes')\n",
+    "    clean_names(vote_tbl, 'votes_')\n",
+    "\n",
+    "    # bill\n",
+    "    simplified_bill_df = simplify_df(bill_df)\n",
+    "    bill_tbl = table.from_dataframe(simplified_bill_df)\n",
+    "    bill_tbl.rename_column('name','committee_name')\n",
+    "\n",
+    "    # person\n",
+    "    people_df['party_id'] = pd.to_numeric(people_df['party_id'])\n",
+    "    simplified_people_df = simplify_df(people_df)\n",
+    "\n",
+    "    simplified_people_df.loc[simplified_people_df['people_id'] == 8855, 'name'] = 'Michel Lajoie'\n",
+    "    simplified_people_df.loc[simplified_people_df['people_id'] == 8855, 'first_name'] = 'Michel'\n",
+    "    simplified_people_df.loc[simplified_people_df['people_id'] == 21232, 'name'] = 'Tiffany Roberts'\n",
+    "    simplified_people_df.loc[simplified_people_df['people_id'] == 21232, 'last_name'] = 'Roberts'\n",
+    "\n",
+    "    people_tbl = table.from_dataframe(simplified_people_df)\n",
+    "    \n",
+    "    legiscan_tables = [\n",
+    "        {\n",
+    "            'table':'legiscan_people',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': ['people_id','session_id'],\n",
+    "            'sortkey': 'people_id',\n",
+    "            'distkey': 'people_id',\n",
+    "            'tbl': people_tbl\n",
+    "        },\n",
+    "        {\n",
+    "            'table':'legiscan_roll_calls',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': 'roll_call_id',\n",
+    "            'sortkey': 'votes_date',\n",
+    "            'distkey': 'roll_call_id',\n",
+    "            'tbl': roll_call_tbl\n",
+    "        },\n",
+    "        {\n",
+    "            'table':'legiscan_bills',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': 'bill_id',\n",
+    "            'sortkey': 'session_id',\n",
+    "            'distkey': 'bill_id',\n",
+    "            'tbl': bill_tbl\n",
+    "        },\n",
+    "        {\n",
+    "            'table':'legiscan_votes',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': ['roll_call_id','people_id'],\n",
+    "            'sortkey': 'roll_call_id, people_id',\n",
+    "            'distkey': 'roll_call_id',\n",
+    "            'tbl': vote_tbl\n",
+    "        },\n",
+    "        {\n",
+    "            'table':'legiscan_subjects',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': ['bill_id','subject_id'],\n",
+    "            'sortkey': 'subject_id',\n",
+    "            'distkey': 'bill_id',\n",
+    "            'tbl': subjects_tbl\n",
+    "        },\n",
+    "        {\n",
+    "            'table':'legiscan_sponsors',\n",
+    "            'schema': 'lkesich',\n",
+    "            'primarykey': ['people_id','bill_id'],\n",
+    "            'sortkey': 'people_id',\n",
+    "            'distkey': 'bill_id',\n",
+    "            'tbl': sponsors_tbl\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "\n",
+    "    \"\"\" Update or create all data tables in redshift. \"\"\"\n",
+    "    for key in legiscan_tables:\n",
+    "        tbl = key['tbl']\n",
+    "        target_table = key['schema'] + '.' + key['table']\n",
+    "        distkey = key['distkey']\n",
+    "        sortkey = key['sortkey']\n",
+    "        primary_key = key['primarykey']\n",
+    "\n",
+    "        if rs.table_exists(target_table):\n",
+    "            rs.upsert(\n",
+    "                tbl,\n",
+    "                target_table,\n",
+    "                primary_key,\n",
+    "                distkey,\n",
+    "                sortkey\n",
+    "            )\n",
+    "        else:\n",
+    "            rs.copy(\n",
+    "                tbl,\n",
+    "                target_table,\n",
+    "                if_exists = \"drop\",\n",
+    "                distkey = distkey,\n",
+    "                sortkey = sortkey\n",
+    "            )\n",
+    "            \n",
+    "        \n",
+    "    \"\"\" Update stored dataset hashes in redshift. \"\"\"\n",
+    "    rs.upsert(new_hashes, stored_hashes_loc, 'session_id')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "356114ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LRK Environment",
+   "display_name": "legiscan",
    "language": "python",
-   "name": "myenv"
+   "name": "legiscan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -382,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
